--- a/project2/WEBAPI_Project2/appsettings.json
+++ b/project2/WEBAPI_Project2/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Secret": "secretkeyclient0",
+  "Secret": "seeylkjsdlkfjlkajsldfjlkajsdlfjasdjflkclient",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=project_csharp_01_2;Trusted_Connection=True;"
   },
